--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "typescript": "^5.0.4"
