--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "gray-matter": "^4.0.3",
+    "markdown-loader": "^8.0.0",
     "next": "^13.4.4",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.0",
