--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@vercel/analytics": "^1.1.0",
     "aos": "^3.0.0-beta.6",
     "gray-matter": "^4.0.3",
     "markdown-loader": "^8.0.0",
